# GBT-Register-Manager

./: .gitignore  BUILD.md  README.md  README_en.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.cargo/: config.toml
Python_v2.0.1.0/: requirements.txt  requirements_deprecated.txt  requirements_dev.txt
Python_v2.0.1.0/example/: alarm.py  coordinate_system.py  hardware_state.py  modbus.py  program_pose.py  run_all_examples.py  sub_pub.py
Python_v2.0.1.0/example/arm/: access_operate.py  connect_disconnect.py  estop.py  get_arm_model_info.py  get_ctrl_status.py  get_robot_status.py  get_servo_status.py  get_version.py  servo_operate.py  soft_mode.py  switch_led_light.py
Python_v2.0.1.0/example/execution/: bas_script_execution.py  program_execution.py
Python_v2.0.1.0/example/extension/: extension_operation.py
Python_v2.0.1.0/example/file_manager/: file_manager.py  test_prog.json  test_torque.trajectory
python-sidecar/: bridge.py  build_sidecar.ps1  gbt_bridge.spec  requirements-build.txt  requirements.txt
scripts/: clean.mjs  download_tauri_wix_nsis_tools.ps1  prepare_tauri_tools.ps1  rename_bundles.ps1
src/: App.vue  Root.vue  main.ts  naiveTheme.ts  splash.ts  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/binaries/: .gitkeep  README.md
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/i18n/: index.ts
src/locales/: en.ts  ja.ts  ko.ts  ru.ts  zh.ts
src/services/: tauriApi.ts
src/utils/: excel.ts
(+39 files in other folders)
